--- a/RestSharp/packages.config
+++ b/RestSharp/packages.config
@@ -4,13 +4,18 @@
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform" version="17.5.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="NuGet.Frameworks" version="5.11.3" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="111.0.5563.4100" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Data.OleDb" version="7.0.0" targetFramework="net472" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
 </packages>
