--- a/RestSharp/RestSharp.csproj
+++ b/RestSharp/RestSharp.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Generic\ObjRepo\HomePage.cs" />
     <Compile Include="Generic\ObjRepo\LoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test\LoginPageTestClass\ExcelTesting.cs" />
     <Compile Include="Test\LoginPageTestClass\LoginPageTest.cs" />
   </ItemGroup>
   <ItemGroup>
